css/custom.css
/* ... */
.modal-header .close {
    margin-top:-10px;
}

#contact-modal .modal-dialog {
    background:#FFF;
    border-radius:5px;
}

/* Service Modals */

#services a:hover {
    text-decoration:none;
}

.service-modal .modal-body, .service-modal .modal-header {
    background:#FFF;
}
.service-modal h4 {
    color:#1385E8;
}
.service-modal .modal-header {
    border-radius:3px 3px 0px 0px;
}
.service-modal .modal-body {
    border-radius:0px 0px 3px 3px;
}
.service-modal-text p {
    line-height:25px;
    font-size:16px;
    margin-bottom:15px;
}
.service-modal img {
    margin-bottom:10px;
}

/* OFFICE TOUR MODAL */

.owl-carousel .owl-dots {
    display:none;
}

.owl-carousel:hover .owl-nav [class*=owl-], .owl-carousel .owl-nav [class*=owl-]:hover, .owl-carousel.with-carousel-dots .owl-nav [class*=owl-] {
    background:#1385E8 !important;
    color:#FFF !important;
}

.owl-carousel .owl-nav [class*=owl-] {
    opacity:1 !important;
}

#mobile-slider > img {
    width:100%;
}
.device-sm .tour-btn-wrap, .device-xs .tour-btn-wrap, .device-xxs .tour-btn-wrap {
    text-align:center;
}
.device-sm #contact-form-overlay-mini, .device-xs #contact-form-overlay-mini, .device-xxs #contact-form-overlay-mini {
    box-shadow:none;
}
.device-xs #membership-club h2 {
    font-size:46px;
}
.device-xxs .specials-row {
    padding-left:20px;
    padding-right:20px;
}
.device-xxs #phone-slug-1 .button {
    padding-left:40px;
    padding-right:40px;
}
.device-xxs #services h2 {
    font-size:34px;
}
.device-xxs .button-1 {
    font-size:16px;
}
.device-xxs .button-2 {
    font-size:16px;
}
#patient-reviews iframe {
    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
}

